fix(docs-infra): correctly display copy button in IE11 (#38186)
Fix button top portion was clipped in IE11 by setting overflow to visible

Fixes #37816

PR Close #38186

--- a/aio/src/styles/2-modules/_code.scss
+++ b/aio/src/styles/2-modules/_code.scss
@@ -108,6 +108,7 @@ aio-code pre {
   top: -7px;
   right: -19px;
   padding: 0;
+  overflow: visible; // This is required for the button to be displayed correctly in IE11.
 
   color: $blue-grey-200;
   background-color: transparent;
